Added CRJ9 wingspan

--- a/data/config.json
+++ b/data/config.json
@@ -222,6 +222,7 @@
 	"ASTR": 16.1,
     "DHC6": 19.8,
     "CRJ2": 21.2,
+    "CRJ9": 24.9,
     "E190": 28.7,
     "A319": 34.1,
     "A320": 34.1,
