--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "express": "^5.1.0",
     "jose": "^6.1.0",
     "jsonwebtoken": "^9.0.2",
+    "lowdb": "^7.0.1",
     "node-fetch": "^3.3.2",
     "redis": "^5.8.3",
     "sqlite3": "^5.1.7"
