--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "lowdb": "^7.0.1",
     "node-fetch": "^3.3.2",
     "redis": "^5.8.3",
-    "sqlite3": "^5.1.7"
+    "sqlite3": "^5.1.7",
+    "tree-kill": "^1.2.2"
   },
   "devDependencies": {
     "nodemon": "^3.1.10"
