--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "async-mutex": "^0.5.0",
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
     "jose": "^6.1.0",
