--- a/package.json
+++ b/package.json
@@ -17,11 +17,9 @@
     "express": "^5.1.0",
     "jose": "^6.1.0",
     "jsonwebtoken": "^9.0.2",
-    "lowdb": "^7.0.1",
     "node-fetch": "^3.3.2",
     "redis": "^5.8.3",
-    "sqlite3": "^5.1.7",
-    "tree-kill": "^1.2.2"
+    "sqlite3": "^5.1.7"
   },
   "devDependencies": {
     "nodemon": "^3.1.10"
