--- a/package.json
+++ b/package.json
@@ -18,9 +18,7 @@
     "jsonwebtoken": "^9.0.2",
     "node-fetch": "^3.3.2",
     "redis": "^5.8.3",
-    "sqlite3": "^5.1.7"
-  },
-  "devDependencies": {
+    "sqlite3": "^5.1.7",
     "nodemon": "^3.1.10"
   }
 }
